hphp/test/zend/bad/ext/standard/tests/serialize/serialization_precision_002.php
<?php
ini_set('serialize_precision', 75);

/* Prototype  : proto string serialize(mixed variable)
 * Description: Returns a string representation of variable (which can later be unserialized) 
 * Source code: ext/standard/var.c
 * Alias to functions: 
 */
/* Prototype  : proto mixed unserialize(string variable_representation)
 * Description: Takes a string representation of variable and recreates it 
 * Source code: ext/standard/var.c
 * Alias to functions: 
 */

var_dump(serialize(0.1));
?>